test: update unit tests for controller, service, repository and adapter; add validation tests